--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.12",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "ws": "^8.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
